--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-        About Me Page - Bootstrap Edition
+        Contact Page - Bootstrap Edition
     </title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -21,7 +21,7 @@
                 <nav class="navbar navbar-expand-lg navbar-light bg-light pl-5 float-sm-left"
                     style="padding-top: 0vh; padding-bottom: 0vh; width: 100%; font-family: Arial, Helvetica, sans-serif; background-color:#ffffff !important; border-bottom: 3px solid #cccccc">
                     <h1
-                        style="font-family: Georgia, 'Times New Roman', Times, serif;text-align: center; background-color: #44aaaa; padding: 3vh; margin-bottom: 0vh; margin-left: 15vw; color: #ffffff">
+                        style="font-family: Georgia, 'Times New Roman', Times, serif;text-align: center; background-color: #44aaaa; padding: 3vh; margin-bottom: 0vh; margin-left: 10vw; color: #ffffff">
                         Joe Hutchinson</h1>
 
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
