--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <nav class="navbar navbar-expand-lg navbar-light bg-light pl-5 float-sm-left"
                     style="padding-top: 0vh; padding-bottom: 0vh; width: 100%; font-family: Arial, Helvetica, sans-serif; background-color:#ffffff !important; border-bottom: 3px solid #cccccc">
                     <h1
-                        style="font-family: Georgia, 'Times New Roman', Times, serif;text-align: center; background-color: #44aaaa; padding: 3vh; margin-bottom: 0vh; margin-left: 10vw; color: #ffffff">
+                        style="font-family: Georgia, 'Times New Roman', Times, serif; font-weight: 700; text-align: center; background-color: #44aaaa; padding: 3vh; margin-bottom: 0vh; margin-left: 9vw; color: #ffffff">
                         Joe Hutchinson</h1>
 
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
