--- a/contact.html
+++ b/contact.html
@@ -31,11 +31,11 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto pr-5" style="margin-right: 15vw; color: #777777 !important">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link"
-                                href="file:///C:/Users/netha/Course_Work/Bootstrap-Portfolio/portfolio.html">Portfolio</a>
+                                href="portfolio.html">Portfolio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/contact.html">Contact</a>
