--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link"
-                                    href="file:///C:/Users/netha/Course_Work/Bootstrap-Portfolio/portfolio.html">Portfolio</a>
+                                    href="portfolio.html">Portfolio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/contact.html">Contact</a>
+                                <a class="nav-link" href="contact.html">Contact</a>
                             </li>
 
                         </ul>
