--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                                 href="portfolio.html">Portfolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/contact.html">Contact</a>
+                            <a class="nav-link" href="#">Contact</a>
                         </li>
 
                     </ul>
