Font correction to index.html.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="row"> <!-- About Me section -->
         <div class="container" style="background-color: #ffffff; max-width: 65%; margin-top: 5vh; margin-bottom: 4vh; margin-left: 17.5vw; padding: 2em; position: relative">
-            <h1 style="font-family: Georgia, 'Times New Roman', Times, serif; color: #44aaaa">About Me</h1>
+            <h1 style="font-family: Georgia, 'Times New Roman', Times, serif; color: #44aaaa; font-weight: 700">About Me</h1>
             <hr style="max-height: 1px; max-width: 100%; background-color: #777777">
             <img src="assets/images/Me-11-22-2018.jpg" style="float: left; position: relative; width: 22vw; padding-right: 1em">
             <p style="text-indent: 2em">I have worked 12 years in the eccomerce industry, and have recently decided to start on a new career path by enrolling in a coding bootcamp course.  Previously, I attended the University of Washington and graduated with distinction in two BA's.  My proudest achievement in my professional career is becoming a manager for a small data entry & digital merchandising team.</p>
