--- a/contact.html
+++ b/contact.html
@@ -53,8 +53,8 @@
         <div class="row">
             <div class="container"
                 style="background-color: #ffffff; max-width: 65%; margin-top: 5vh; margin-bottom: 4vh; margin-left: 17.5vw; padding: 2em; position: relative">
-                <h1 style="font-family: Georgia, 'Times New Roman', Times, serif; font-weight: 700; color: #44aaaa">
-                    Contact</h1>
+                <h2 style="font-family: Georgia, 'Times New Roman', Times, serif; font-weight: 700; color: #44aaaa">
+                    Contact</h2>
                 <hr style="max-height: 1px; max-width: 100%; background-color: #777777">
                 <form style="font-family: Arial, Helvetica, sans-serif; color: #777777; padding: 2em">
                     <ul>
@@ -83,7 +83,7 @@
             </div>
         </div>
 
-
+    </div>
 
 
 
