--- a/portfolio.html
+++ b/portfolio.html
@@ -67,11 +67,11 @@
                     </div>
                     <div class="col-xl-4">
                         <div class="card" style="width: 18rem">
-                            <img class="card-img-top" src="assets/images/darth-vaderimg.jpg" alt="Lord Vader">
+                            <a href="https://joelearns2code.github.io/Word-Guess-Game/"><img class="card-img-top" src="assets/images/under-construction.png" alt="Lord Vader"></a>
                             <div class="card-body">
                                 <p class="card-text"
                                     style="text-align: center; font-family:Arial, Helvetica, sans-serif; background:#44aaaa; color:#ffffff; margin: -1em; padding: 1em; font-size: 14pt">
-                                    Sith Lords</p>
+                                    Star Wars Word Game</p>
                             </div>
                         </div>
                     </div>
