updates to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -77,11 +77,11 @@
                     </div>
                     <div class="col-xl-4">
                         <div class="card" style="width: 18rem">
-                            <img class="card-img-top" src="assets/images/vikingimg.jpg" alt="Lagertha total babe">
+                            <a href="https://joelearns2code.github.io/unit-4-game/"><img class="card-img-top" src="assets/images/dwarf.jpg"  alt="miner dwarf"></a>
                             <div class="card-body">
                                 <p class="card-text"
                                     style="text-align: center; font-family:Arial, Helvetica, sans-serif; background:#44aaaa; color:#ffffff; margin: -1em; padding: 1em; font-size: 14pt">
-                                    Vikings</p>
+                                    Gem Hunter</p>
                             </div>
                         </div>
                     </div>
@@ -100,11 +100,11 @@
                     </div>
                     <div class="col-xl-4">
                         <div class="card" style="width: 18rem">
-                            <img class="card-img-top" src="assets/images/hamster.jpg" alt="Hamster">
+                            <a href="https://joelearns2code.github.io/TriviaGame/"><img class="card-img-top" src="assets/images/pirate.jpg" alt="pirate"></a>
                             <div class="card-body">
                                 <p class="card-text"
                                     style="text-align: center; font-family:Arial, Helvetica, sans-serif; background:#44aaaa; color:#ffffff; margin: -1em; padding: 1em; font-size: 14pt">
-                                    Hamsters</p>
+                                    Pirate Trivia</p>
                             </div>
                         </div>
                     </div>
