Added link to GIPHY assignment.

--- a/portfolio.html
+++ b/portfolio.html
@@ -90,11 +90,11 @@
                 <div class="row">
                     <div class="col-xl-4">
                         <div class="card" style="width: 18rem">
-                            <img class="card-img-top" src="assets/images/gandalfimg.jpg" alt="Olorin">
+                            <a href="https://joelearns2code.github.io/GifTastic/"><img class="card-img-top" src="assets/images/fighter_GIPHY.gif" alt="Ken punch"></a>
                             <div class="card-body">
                                 <p class="card-text"
                                     style="text-align: center; font-family:Arial, Helvetica, sans-serif; background:#44aaaa; color:#ffffff; margin: -1em; padding: 1em; font-size: 14pt">
-                                    Wizards</p>
+                                    GIPHY Fighters</p>
                             </div>
                         </div>
                     </div>
