Updated with link to train scheduler project.

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,11 +57,11 @@
                 <div class="row">
                     <div class="col-xl-4">
                         <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="assets/images/kittenimg.jpg" alt="Kitty">
+                            <a href="https://joelearns2code.github.io/Train-Scheduler/"><img class="card-img-top" src="assets/images/train.jpg" alt="train"></a>
                             <div class="card-body">
                                 <p class="card-text"
                                     style="text-align: center; font-family:Arial, Helvetica, sans-serif; background:#44aaaa; color:#ffffff; margin: -1em; padding: 1em; font-size: 14pt">
-                                    Kittens</p>
+                                    Train-Scheduler</p>
                             </div>
                         </div>
                     </div>
