--- a/contact.html
+++ b/contact.html
@@ -6,39 +6,43 @@
         Contact Page - Bootstrap Edition
     </title>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <!-- Additional CSS & Google Fonts -->
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Aclonica|Adamina|Alegreya|Cinzel+Decorative|El+Messiri|Fondamento|Gabriela|Laila|Montserrat|Rambla&display=swap" rel="stylesheet">
 </head>
 
-<body background=assets/images/fabric_1.png> <!-- Nav Bar -->
+<body> <!-- Nav Bar -->
     <div class="container" style="max-width: 100%">
         <div class="row">
 
             <nav class="navbar navbar-expand-lg navbar-light bg-light pl-5 float-sm-left"
-                style="padding-top: 0vh; padding-bottom: 0vh; width: 100%; font-family: Arial, Helvetica, sans-serif; background-color:#ffffff !important; border-bottom: 3px solid #cccccc">
-                <h1
-                    style="font-family: Georgia, 'Times New Roman', Times, serif; font-weight: 700; text-align: center; background-color: #44aaaa; padding: 3vh; margin-bottom: 0vh; margin-left: 9vw; color: #ffffff">
-                    Joe Hutchinson</h1>
+                style="padding-top: 0vh; padding-bottom: 0vh; width: 100%; font-family: Arial, Helvetica, sans-serif; background-color:#343a40  !important; border-bottom: 3px solid #228B22">
+                <h2 id=myName
+                    style="font-family: 'El Messiri', sans-serif; font-size: 30pt; text-align: center; font-weight: 700; padding: 2vh; margin-bottom: 0vh; margin-left: 0vw; width: 8em; color: #ffffff">
+                    Joe Hutchinson</h2>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-auto pr-5" style="margin-right: 15vw; color: #777777 !important">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
+                <div class="collapse navbar-collapse" id="navbarNav"  style="color: #ffffff">
+                    <ul class="navbar-nav ml-auto pr-5" style="text-align: right; color: #777777 !important">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html"  style="color: #ffffff">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link"
-                                href="portfolio.html">Portfolio</a>
+                            <a class="nav-link" href="#"  style="color: #ffffff">Portfolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="contact.html"  style="color: #ffffff">Contact</a>
                         </li>
 
                     </ul>
@@ -103,15 +107,18 @@
 
 
 
-        <footer class="page-footer font-small grey fixed-bottom"
-            style="padding-top: 0vh; padding-bottom: 0vh; width: 100%; font-family: Arial, Helvetica, sans-serif; background-color:#666666 !important; border-top: 3px solid #44aaaa; color: #ffffff">
+    <footer class="page-footer font-small grey fixed-bottom"
+    style="padding-top: 0vh; padding-bottom: 0vh; width: 100%; font-family: Arial, Helvetica, sans-serif; background-color:#343a40 !important; border-top: 3px solid #228B22; color: #ffffff">
+
+   
+    <div class="footer-copyright text-center py-3">Copyright©
+            <a href="https://github.com/JoeLearns2Code" target="_blank">
+                <i class="fa fa-github"><img src="assets/images/GitHub-Mark-32px.png" style="width: 2.5em; margin-bottom: -.25em; margin-left: 1em"></i>
+            </a>
+    </div>
 
 
-            <div class="footer-copyright text-center py-3">Copyright©
-            </div>
-
-
-        </footer>
+</footer>
 
 
         <!-- Optional JavaScript -->
