--- a/contact.html
+++ b/contact.html
@@ -39,10 +39,10 @@
                             <a class="nav-link" href="index.html"  style="color: #ffffff">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"  style="color: #ffffff">Portfolio</a>
+                            <a class="nav-link" href="portfolio.html"  style="color: #ffffff">Portfolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html"  style="color: #ffffff">Contact</a>
+                            <a class="nav-link" href="#"  style="color: #ffffff">Contact</a>
                         </li>
 
                     </ul>
