--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav"  style="color: #ffffff">
                     <ul class="navbar-nav ml-auto pr-5" style="text-align: right; color: #777777 !important">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html"  style="color: #ffffff">About</a>
+                            <a class="nav-link" href="#"  style="color: #ffffff">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"  style="color: #ffffff">Portfolio</a>
+                            <a class="nav-link" href="portfolio.html"  style="color: #ffffff">Portfolio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html"  style="color: #ffffff">Contact</a>
