updated image in link.

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
                 <hr style="max-height: 1px; max-width: 100%; background-color: #777777">
                 <div class="row" style="justify-content: space-between">
 
-                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
                         <div class="card" style="width: 16em">
                             <a href="https://joelearns2code.github.io/Project-1/"><img class="card-img-top"
                                     src="assets/images/life_relocated.PNG" alt="life relocated" style="width: 16em; height: 16em;"></a>
@@ -74,7 +74,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
                         <div class="card" style="width: 16em">
                             <a href="https://joelearns2code.github.io/TriviaGame/"><img class="card-img-top"
                                     src="assets/images/pirate.jpg" alt="pirate" style="width: 16em; height: 16em;"></a>
@@ -86,7 +86,7 @@
                         </div>
                     </div>
 
-                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
                         <div class="card" style="width: 16em">
                             <a href="https://joelearns2code.github.io/unit-4-game/"><img class="card-img-top"
                                     src="assets/images/dwarf.jpg" alt="miner dwarf"
@@ -101,7 +101,7 @@
 
                 </div>
                 <div class="row" style="margin-top: 1em; justify-content: space-between">
-                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
                         <div class="card" style="width: 16em">
                             <a href="https://joelearns2code.github.io/Train-Scheduler/"><img class="card-img-top"
                                     src="assets/images/train.jpg" alt="train" style="width: 16em; height: 16em;"></a>
@@ -112,7 +112,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
                         <div class="card" style="width: 16em">
                             <a href="https://joelearns2code.github.io/GifTastic/"><img class="card-img-top"
                                     src="assets/images/fighter_GIPHY.gif" alt="Ken punch"
@@ -125,10 +125,10 @@
                         </div>
                     </div>
 
-                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
                         <div class="card" style="width: 16em">
                             <a href="https://joelearns2code.github.io/Word-Guess-Game/"><img class="card-img-top"
-                                    src="assets/images/under-construction.png" alt="Lord Vader"
+                                    src="assets/images/darth-vaderimg.jpg" alt="Lord Vader"
                                     style="width: 16em; height: 16em;"></a>
                             <div class="card-body" style="width: 16em">
                                 <p class="card-text"
