updated style on About page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
                 <div class="row" style="justify-content: space-between">
 
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
-                        <div class="card" style="width: 16em">
+                        <div class="card" style="width: 16em; margin-bottom: 1em;">
                             <a href="https://joelearns2code.github.io/Project-1/"><img class="card-img-top"
                                     src="assets/images/life_relocated.PNG" alt="life relocated" style="width: 16em; height: 16em;"></a>
                             <div class="card-body" style="width: 16em">
@@ -75,7 +75,7 @@
                     </div>
 
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
-                        <div class="card" style="width: 16em">
+                        <div class="card" style="width: 16em; margin-bottom: 1em">
                             <a href="https://joelearns2code.github.io/TriviaGame/"><img class="card-img-top"
                                     src="assets/images/pirate.jpg" alt="pirate" style="width: 16em; height: 16em;"></a>
                             <div class="card-body" style="width: 16em">
@@ -87,8 +87,8 @@
                     </div>
 
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
-                        <div class="card" style="width: 16em">
-                            <a href="https://joelearns2code.github.io/unit-4-game/"><img class="card-img-top"
+                        <div class="card" style="width: 16em; margin-bottom: 1em">
+                            <a href="https://joelearns2code.github.io/Gem-Hunter/"><img class="card-img-top"
                                     src="assets/images/dwarf.jpg" alt="miner dwarf"
                                     style="width: 16em; height: 16em;"></a>
                             <div class="card-body" style="width: 16em">
@@ -100,9 +100,9 @@
                     </div>
 
                 </div>
-                <div class="row" style="margin-top: 1em; justify-content: space-between">
+                <div class="row" style="justify-content: space-between">
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
-                        <div class="card" style="width: 16em">
+                        <div class="card" style="width: 16em; margin-bottom: 1em">
                             <a href="https://joelearns2code.github.io/Train-Scheduler/"><img class="card-img-top"
                                     src="assets/images/train.jpg" alt="train" style="width: 16em; height: 16em;"></a>
                             <div class="card-body" style="width: 16em">
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
-                        <div class="card" style="width: 16em">
+                        <div class="card" style="width: 16em; margin-bottom: 1em">
                             <a href="https://joelearns2code.github.io/GifTastic/"><img class="card-img-top"
                                     src="assets/images/fighter_GIPHY.gif" alt="Ken punch"
                                     style="width: 16em; height: 16em;"></a>
@@ -126,7 +126,7 @@
                     </div>
 
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
-                        <div class="card" style="width: 16em">
+                        <div class="card" style="width: 16em; margin-bottom: 1em">
                             <a href="https://joelearns2code.github.io/Word-Guess-Game/"><img class="card-img-top"
                                     src="assets/images/darth-vaderimg.jpg" alt="Lord Vader"
                                     style="width: 16em; height: 16em;"></a>
