--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
         <div class="row">
             <!-- About Me section -->
             <div class="container"
-                style="background-color: #ffffff; max-width: 65%; margin-top: 5vh; margin-bottom: 4vh; margin-left: 17.5vw; padding: 2em; position: relative">
-                <h2 style="font-family: Georgia, 'Times New Roman', Times, serif; color: #44aaaa; font-weight: 700">
+                style="background-color: #F5DEB3; max-width: 75%; margin-top: 5vh; margin-bottom: 4vh; margin-left: 12vw; padding: 2em; position: relative">
+                <h2 style="font-family: 'Fondamento', cursive, Times, serif; font-size: 20pt; color: #228B22; font-weight: 700">
                     About Me</h2>
                 <hr style="max-height: 1px; max-width: 100%; background-color: #777777">
-                <img src="assets/images/Me-11-22-2018.jpg" alt="mypic"
-                    style="float: left; position: relative; width: 22vw; padding-right: 1em">
-                <p style="text-indent: 2em">I have worked 12 years in the eccomerce industry, and have recently decided
+                <img id="myPic" src="assets/images/Me-11-22-2018.jpg" alt="mypic"
+                    style="float: left; position: relative; width: 25vw; padding-right: 1em; padding-bottom: 1em">
+                <p class="myBio" style="text-indent: 2em">I have worked 12 years in the eccomerce industry, and have recently decided
                     to start on a new career path by enrolling in a coding bootcamp course. Previously, I attended the
                     University of Washington and graduated with distinction in two BA's. My proudest achievement in my
                     professional career is becoming a manager for a small data entry & digital merchandising team.</p>
-                <p>I enjoy reading, gaming, and taking long walks in the forest. I am a life long Star Wars and Tolkien
+                <p class="myBio" style="text-indent: 2em">I enjoy reading, gaming, and taking long walks in the forest. I am a life long Star Wars and Tolkien
                     fan. Above all I love learning and discovering new things.</p>
-                <p>While I am primarily a cat person, I am fond of dogs too, and am pet friendly in general. I currently
+                <p class="myBio" style="text-indent: 2em">While I am primarily a cat person, I am fond of dogs too, and am pet friendly in general. I currently
                     do not have any pets, but hope to adopt a couple kittens in July. I have a 4-year old niece and
                     2-year old nephew whom I love and adore.</p>
             </div>
