Updated background image and footer links.

--- a/contact.html
+++ b/contact.html
@@ -115,6 +115,9 @@
             <a href="https://github.com/JoeLearns2Code" target="_blank">
                 <i class="fa fa-github"><img src="assets/images/GitHub-Mark-32px.png" style="width: 2.5em; margin-bottom: -.25em; margin-left: 1em"></i>
             </a>
+            <a href="https://www.linkedin.com/in/joe-hutchinson-996920173/" target="_blank">
+                <img src="assets/images/LinkedIn_icon.jpg" style="width: 2.5em; margin-bottom: -.25em; margin-left: 1em">
+            </a>
     </div>
 
 
