Added resume pdf.  Updated footer links and ReadMe file.

--- a/contact.html
+++ b/contact.html
@@ -156,6 +156,9 @@
             <a href="https://www.linkedin.com/in/joe-hutchinson-996920173/" target="_blank">
                 <img src="assets/images/LinkedIn_icon.jpg" style="width: 2.5em; margin-bottom: -.25em; margin-left: 1em">
             </a>
+            <a href="assets/pdfs/Joe Hutchinson Resume 12-1-2018.pdf" target="_blank">
+                <img src="assets/images/resume_icon.png" style="width: 2.5em; margin-bottom: -.25em; margin-left: 1em">
+            </a>
     </div>
 
 
@@ -175,7 +178,7 @@
         <!-- Contact Form JavaScript-->
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-        <script src="validator.js"></script>
+        <script src="assets/javascript/validator.js"></script>
         <script src="assets/javascript/contact.js"></script>
 </body>
 
