--- a/portfolio.html
+++ b/portfolio.html
@@ -153,6 +153,9 @@
                     <a href="https://www.linkedin.com/in/joe-hutchinson-996920173/" target="_blank">
                         <img src="assets/images/LinkedIn_icon.jpg" style="width: 2.5em; margin-bottom: -.25em; margin-left: 1em">
                     </a>
+                    <a href="assets/pdfs/Joe Hutchinson Resume 12-1-2018.pdf" target="_blank">
+                        <img src="assets/images/resume_icon.png" style="width: 2.5em; margin-bottom: -.25em; margin-left: 1em">
+                    </a>
                 </div>
 
 
