Updating Portfolio page with latest projects.

--- a/portfolio.html
+++ b/portfolio.html
@@ -75,6 +75,18 @@
                     </div>
 
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+                        <div class="card" style="width: 16em; margin-bottom: 1em;">
+                            <a href="https://spawtted.herokuapp.com/"><img class="card-img-top"
+                                    src="assets/images/sPAWtted.PNG" alt="spawtted" style="width: 16em; height: 16em;"></a>
+                            <div class="card-body" style="width: 16em">
+                                <p class="card-text"
+                                    style="text-align: center; font-family:Arial, Helvetica, sans-serif; background:#228B22; color:#ffffff; margin: -1em; padding: 1em; font-size: 14pt">
+                                    sPAWtted</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
                         <div class="card" style="width: 16em; margin-bottom: 1em">
                             <a href="https://joelearns2code.github.io/TriviaGame/"><img class="card-img-top"
                                     src="assets/images/pirate.jpg" alt="pirate" style="width: 16em; height: 16em;"></a>
@@ -99,6 +111,32 @@
                         </div>
                     </div>
 
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+                        <div class="card" style="width: 16em; margin-bottom: 1em">
+                            <a href="https://github.com/JoeLearns2Code/Bamazon/"><img class="card-img-top"
+                                    src="assets/images/Bamazon.gif" alt="bamazon"
+                                    style="width: 16em; height: 16em;"></a>
+                            <div class="card-body" style="width: 16em">
+                                <p class="card-text"
+                                    style="text-align: center; font-family:Arial, Helvetica, sans-serif; background:#228B22; color:#ffffff; margin: -1em; padding: 1em; font-size: 14pt">
+                                    Bamazon</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+                        <div class="card" style="width: 16em; margin-bottom: 1em">
+                            <a href="https://github.com/JoeLearns2Code/liri-node-app"><img class="card-img-top"
+                                    src="assets/images/liri_bot.gif" alt="liri"
+                                    style="width: 16em; height: 16em;"></a>
+                            <div class="card-body" style="width: 16em">
+                                <p class="card-text"
+                                    style="text-align: center; font-family:Arial, Helvetica, sans-serif; background:#228B22; color:#ffffff; margin: -1em; padding: 1em; font-size: 14pt">
+                                    Liri-Bot</p>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
                 <div class="row" style="justify-content: space-between">
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
@@ -112,6 +150,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
                         <div class="card" style="width: 16em; margin-bottom: 1em">
                             <a href="https://joelearns2code.github.io/GifTastic/"><img class="card-img-top"
@@ -121,6 +160,32 @@
                                 <p class="card-text"
                                     style="text-align: center; font-family:Arial, Helvetica, sans-serif; background:#228B22; color:#ffffff; margin: -1em; padding: 1em; font-size: 14pt">
                                     GIPHY Fighters</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+                        <div class="card" style="width: 16em; margin-bottom: 1em">
+                            <a href="https://github.com/JoeLearns2Code/Constructor-Word-Guess"><img class="card-img-top"
+                                    src="assets/images/wordconstructor.gif" alt="word constructor"
+                                    style="width: 16em; height: 16em;"></a>
+                            <div class="card-body" style="width: 16em">
+                                <p class="card-text"
+                                    style="text-align: center; font-family:Arial, Helvetica, sans-serif; background:#228B22; color:#ffffff; margin: -1em; padding: 1em; font-size: 14pt">
+                                    Word Constructor Game</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+                        <div class="card" style="width: 16em; margin-bottom: 1em">
+                            <a href="https://jl2cburgerapp.herokuapp.com/"><img class="card-img-top"
+                                    src="assets/images/burger.PNG" alt="burger"
+                                    style="width: 16em; height: 16em;"></a>
+                            <div class="card-body" style="width: 16em">
+                                <p class="card-text"
+                                    style="text-align: center; font-family:Arial, Helvetica, sans-serif; background:#228B22; color:#ffffff; margin: -1em; padding: 1em; font-size: 14pt">
+                                    Burger</p>
                             </div>
                         </div>
                     </div>
@@ -137,6 +202,20 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+                        <div class="card" style="width: 16em; margin-bottom: 1em">
+                            <a href="https://jl2cfriendfindapp.herokuapp.com/"><img class="card-img-top"
+                                    src="assets/images/friendfinder.PNG" alt="friend finder"
+                                    style="width: 16em; height: 16em;"></a>
+                            <div class="card-body" style="width: 16em">
+                                <p class="card-text"
+                                    style="text-align: center; font-family:Arial, Helvetica, sans-serif; background:#228B22; color:#ffffff; margin: -1em; padding: 1em; font-size: 14pt">
+                                    Friend Finder</p>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
