--- a/portfolio.html
+++ b/portfolio.html
@@ -71,6 +71,7 @@
                                     style="text-align: center; font-family:Arial, Helvetica, sans-serif; background:#228B22; color:#ffffff; margin: -1em; padding: 1em; font-size: 14pt">
                                     Life Relocated</p>
                             </div>
+                            <a href="https://github.com/JoeLearns2Code/Project-1" style="text-align: center; font-family: Arial, Helvetica, sans-serif">View on GitHub</a>
                         </div>
                     </div>
 
@@ -83,6 +84,7 @@
                                     style="text-align: center; font-family:Arial, Helvetica, sans-serif; background:#228B22; color:#ffffff; margin: -1em; padding: 1em; font-size: 14pt">
                                     sPAWtted</p>
                             </div>
+                            <a href="https://github.com/devinpoore/sPawtted" style="text-align: center; font-family: Arial, Helvetica, sans-serif">View on GitHub</a>
                         </div>
                     </div>
 
@@ -95,6 +97,7 @@
                                     style="text-align: center; font-family:Arial, Helvetica, sans-serif; background:#228B22; color:#ffffff; margin: -1em; padding: 1em; font-size: 14pt">
                                     Pirate Trivia</p>
                             </div>
+                            <a href="https://github.com/JoeLearns2Code/TriviaGame" style="text-align: center; font-family: Arial, Helvetica, sans-serif">View on GitHub</a>
                         </div>
                     </div>
 
@@ -108,6 +111,7 @@
                                     style="text-align: center; font-family:Arial, Helvetica, sans-serif; background:#228B22; color:#ffffff; margin: -1em; padding: 1em; font-size: 14pt">
                                     Gem Hunter</p>
                             </div>
+                            <a href="https://github.com/JoeLearns2Code/Gem-Hunter" style="text-align: center; font-family: Arial, Helvetica, sans-serif">View on GitHub</a>
                         </div>
                     </div>
 
@@ -121,6 +125,7 @@
                                     style="text-align: center; font-family:Arial, Helvetica, sans-serif; background:#228B22; color:#ffffff; margin: -1em; padding: 1em; font-size: 14pt">
                                     Bamazon</p>
                             </div>
+                            <a href="https://github.com/JoeLearns2Code/Bamazon" style="text-align: center; font-family: Arial, Helvetica, sans-serif">View on GitHub</a>
                         </div>
                     </div>
 
@@ -134,6 +139,7 @@
                                     style="text-align: center; font-family:Arial, Helvetica, sans-serif; background:#228B22; color:#ffffff; margin: -1em; padding: 1em; font-size: 14pt">
                                     Liri-Bot</p>
                             </div>
+                            <a href="https://github.com/JoeLearns2Code/liri-node-app" style="text-align: center; font-family: Arial, Helvetica, sans-serif">View on GitHub</a>
                         </div>
                     </div>
 
@@ -148,6 +154,7 @@
                                     style="text-align: center; font-family:Arial, Helvetica, sans-serif; background:#228B22; color:#ffffff; margin: -1em; padding: 1em; font-size: 14pt">
                                     Train-Scheduler</p>
                             </div>
+                            <a href="https://github.com/JoeLearns2Code/Train-Scheduler" style="text-align: center; font-family: Arial, Helvetica, sans-serif">View on GitHub</a>
                         </div>
                     </div>
 
@@ -161,6 +168,7 @@
                                     style="text-align: center; font-family:Arial, Helvetica, sans-serif; background:#228B22; color:#ffffff; margin: -1em; padding: 1em; font-size: 14pt">
                                     GIPHY Fighters</p>
                             </div>
+                            <a href="https://github.com/JoeLearns2Code/GifTastic" style="text-align: center; font-family: Arial, Helvetica, sans-serif">View on GitHub</a>
                         </div>
                     </div>
 
@@ -172,8 +180,9 @@
                             <div class="card-body" style="width: 16em">
                                 <p class="card-text"
                                     style="text-align: center; font-family:Arial, Helvetica, sans-serif; background:#228B22; color:#ffffff; margin: -1em; padding: 1em; font-size: 14pt">
-                                    Word Constructor Game</p>
+                                    Word Guess Game</p>
                             </div>
+                            <a href="https://github.com/JoeLearns2Code/Constructor-Word-Guess" style="text-align: center; font-family: Arial, Helvetica, sans-serif">View on GitHub</a>
                         </div>
                     </div>
 
@@ -187,6 +196,7 @@
                                     style="text-align: center; font-family:Arial, Helvetica, sans-serif; background:#228B22; color:#ffffff; margin: -1em; padding: 1em; font-size: 14pt">
                                     Burger</p>
                             </div>
+                            <a href="https://github.com/JoeLearns2Code/Burger" style="text-align: center; font-family: Arial, Helvetica, sans-serif">View on GitHub</a>
                         </div>
                     </div>
 
@@ -200,6 +210,7 @@
                                     style="text-align: center; font-family:Arial, Helvetica, sans-serif; background:#228B22; color:#ffffff; margin: -1em; padding: 1em; font-size: 14pt">
                                     Star Wars Word Game</p>
                             </div>
+                            <a href="https://github.com/JoeLearns2Code/Word-Guess-Game" style="text-align: center; font-family: Arial, Helvetica, sans-serif">View on GitHub</a>
                         </div>
                     </div>
 
@@ -213,6 +224,7 @@
                                     style="text-align: center; font-family:Arial, Helvetica, sans-serif; background:#228B22; color:#ffffff; margin: -1em; padding: 1em; font-size: 14pt">
                                     Friend Finder</p>
                             </div>
+                            <a href="https://github.com/JoeLearns2Code/FriendFinder" style="text-align: center; font-family: Arial, Helvetica, sans-serif">View on GitHub</a>
                         </div>
                     </div>
 
