Updated About section

--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
                 <hr style="max-height: 1px; max-width: 100%; background-color: #777777">
                 <img id="myPic" src="assets/images/Me-11-22-2018.jpg" alt="mypic"
                     style="float: left; position: relative; width: 25vw; padding-right: 1em; padding-bottom: 1em">
-                <p class="myBio" style="text-indent: 2em">I have worked 12 years in the eccomerce industry, and have recently decided
-                    to start on a new career path by enrolling in a coding bootcamp course. Previously, I attended the
-                    University of Washington and graduated with distinction in two BA's. My proudest achievement in my
-                    professional career is becoming a manager for a small data entry & digital merchandising team.</p>
+                <p class="myBio" style="text-indent: 2em">I am a recently trained Full Stack Web Developer with previous experience merchandising in the e-commerce industry.  In August 2019, I earned a certificate from the University of Washington in Full Stack Web Development, including technologies such as HTML5, CSS3, JavaScript, J-Query, AJAX, Node.js, SQL, MongoDB, and React.js.  I have a passion for collaboratively solving problems and developing long-term solutions, and I am also a fast, independent learner with a keen attention to detail.   </p>  
+                <p class="myBio" style="text-indent: 2em"> My proudest achievement in my
+                    professional career is becoming a manager for a small data entry & digital merchandising team.  Previously I successfully managed a small e-commerce merchandising team, with extensive experience working in an office environment.</p>    
+                <p class="myBio" style="text-indent: 2em">In college I attended the
+                    University of Washington and graduated with distinction in two BA's.</p>
                 <p class="myBio" style="text-indent: 2em">I enjoy reading, gaming, and taking long walks in the forest. I am a life long Star Wars and Tolkien
                     fan. Above all I love learning and discovering new things.</p>
                 <p class="myBio" style="text-indent: 2em">While I am primarily a cat person, I am fond of dogs too, and am pet friendly in general. I currently
