Updating NavBar data

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,8 @@
                 <h1 id=myName
                     style="font-family: 'El Messiri', sans-serif; font-size: 30pt; text-align: center; font-weight: 700; padding: 2vh; margin-bottom: 0vh; margin-left: 0vw; width: 8em; color: #ffffff">
                     Joe Hutchinson</h1>
-
+                <p id=navEmail style="font-family: 'El Messiri', sans-serif; color: #ffffff">email: netharos@gmail.com</p>
+                <p id=navPhone style="font-family: 'El Messiri', sans-serif; color: #ffffff">phone: (425)214-4049</p>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -72,6 +73,8 @@
                                     Life Relocated</p>
                             </div>
                             <a href="https://github.com/JoeLearns2Code/Project-1" style="text-align: center; font-family: Arial, Helvetica, sans-serif">View on GitHub</a>
+                            <p>Description: </p>
+                            <p>Technologies Used: </p>
                         </div>
                     </div>
 
