--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                 <h2 id=myName
                     style="font-family: 'El Messiri', sans-serif; font-size: 30pt; text-align: center; font-weight: 700; padding: 2vh; margin-bottom: 0vh; margin-left: 0vw; width: 8em; color: #ffffff">
                     Joe Hutchinson</h2>
-
+                    <p id=navEmail style="font-family: 'El Messiri', sans-serif; color: #ffffff">email: netharos@gmail.com</p>
+                    <p id=navPhone style="font-family: 'El Messiri', sans-serif; color: #ffffff">phone: (425)214-4049</p>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
