--- a/contact.html
+++ b/contact.html
@@ -157,7 +157,7 @@
             <a href="https://www.linkedin.com/in/joe-hutchinson-996920173/" target="_blank">
                 <img src="assets/images/LinkedIn_icon.jpg" style="width: 2.5em; margin-bottom: -.25em; margin-left: 1em">
             </a>
-            <a href="assets/pdfs/Joe Hutchinson Resume 12-1-2018.pdf" target="_blank">
+            <a href="assets/pdfs/Joe Hutchinson Resume 8-2019-converted.pdf" target="_blank">
                 <img src="assets/images/resume_icon.png" style="width: 2.5em; margin-bottom: -.25em; margin-left: 1em">
             </a>
     </div>
