--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
                     University of Washington and graduated with distinction in two BA's.</p>
                 <p class="myBio" style="text-indent: 2em">I enjoy reading, gaming, and taking long walks in the forest. I am a life long Star Wars and Tolkien
                     fan. Above all I love learning and discovering new things.</p>
-                <p class="myBio" style="text-indent: 2em">While I am primarily a cat person, I am fond of dogs too, and am pet friendly in general. I currently
-                    do not have any pets, but hope to adopt a couple kittens in July. I have a 4-year old niece and
+                <p class="myBio" style="text-indent: 2em">While I am primarily a cat person, I am fond of dogs too, and am currently a proud owner of two kittens. I have a 4-year old niece and
                     2-year old nephew whom I love and adore.</p>
             </div>
         </div>
